# yeah_hand_ros

./: README.md
yeah_hand_description/: CMakeLists.txt  package.xml
yeah_hand_description/launch/: display.launch.py
yeah_hand_description/meshes/: Index Base.dae  Index Distal.dae  Index Medial.dae  Index Proximal.dae  Lower Cover Back.dae  Lower Cover Front.dae  Palm.dae  Skeleton components.dae  Skeleton.dae  TRS Platform.dae  Thumb Base.dae  Thumb Distal.dae  Thumb Proximal.dae  Upper Cover.dae  WS-ESP32-Servo-Driver-Board.dae  WS-ST3215-Servomotor.dae
yeah_hand_description/rviz/: yeah_hand.rviz
yeah_hand_description/urdf/: finger.xacro  fixed_component.xacro  flexion_servomotor.xacro  rotation_servomotor.xacro  servomotor.xacro  thumb.xacro  yeah_hand.xacro
yeah_hand_hardware/: CMakeLists.txt  README.md  package.xml  yeah_hand_hardware.xml
yeah_hand_hardware/bringup/config/: yeah_hand_controllers.yaml
yeah_hand_hardware/bringup/launch/: yeah_hand_controllers.launch.py
yeah_hand_hardware/hardware/: yeah_hand_driver.cpp
yeah_hand_hardware/hardware/include/yeah_hand_hardware/: btserial.h  yeah_hand_driver.hpp
